added landscape layout and link to installation instructions

--- a/app/src/main/res/layout-land/activity_thanks.xml
+++ b/app/src/main/res/layout-land/activity_thanks.xml
@@ -87,6 +87,10 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:src="@drawable/opengis_website_logo"
-        android:contentDescription="@string/opengis_logo" />
+        android:contentDescription="@string/opengis_logo"
+        android:gravity="left"
+        android:scaleType="fitStart"
+        android:cropToPadding="false"
+        android:paddingStart="@dimen/activity_horizontal_margin" />
 
 </RelativeLayout>
